solved issue of overlapping nodes in graph

--- a/wizzcode-app/src/components/pages/Dependency.css
+++ b/wizzcode-app/src/components/pages/Dependency.css
@@ -40,3 +40,11 @@
   .legend-container{
     flex-basis: 20%;
   }
+
+/* for tooltip on hover */
+  .vis-network {
+    overflow: visible;
+  }
+  .vis-tooltip {
+    position: absolute;
+  }
